--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/intro.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 
 <body>
@@ -19,6 +20,7 @@
             <div class="container">
                 <div class="header__content-inner">
                     <div class="header__logo">
+                        <!--Logo-->
                         <a href="#">
                             <img src="img/logo.png" alt="logo">
                         </a>
@@ -50,6 +52,27 @@
                 <img class="intro__photo" src="" alt=""></img>
             </div>
 
+        </div>
+    </section>
+
+    <!--About Me-->
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                <div class="about__photo">
+                    <!--Фото-->
+                    <img src="" alt="" class="img">
+                </div>
+
+                <div class="about__text">
+                    <h2 class="about__title">О себе</h2>
+                    <p>Здравствуйте! Я преподаватель с огромным опытом преподавания физики для детей.</p>
+                    <p>Сумею заинтересовать и научу любить этот предмет!
+                        Много лет работаю с детьми разного возраста, а также со студентами.</p>
+                    <p> Последние 5 лет активно преподаю по Skype и Zoom</p>
+                </div>
+
+            </div>
         </div>
     </section>
 
