--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="intro__text">Опытный репетитор по физике</div>
                     <a class="btn" href="#">Записаться на бесплатное пробное занятие</a>
                 </div>
+
                 <!--Фото-->
                 <img class="intro__photo" src="" alt=""></img>
             </div>
@@ -59,9 +60,10 @@
     <section class="about">
         <div class="container">
             <div class="about__inner">
+
                 <div class="about__photo">
                     <!--Фото-->
-                    <img src="" alt="" class="img">
+                    <img src="" alt="">
                 </div>
 
                 <div class="about__text">
@@ -71,8 +73,13 @@
                         Много лет работаю с детьми разного возраста, а также со студентами.</p>
                     <p> Последние 5 лет активно преподаю по Skype и Zoom</p>
                 </div>
-
             </div>
+            <div class="about__stat">
+                <div class="about__stat__content" style="text-align: left;"><p>7</p>лет лет практики и опыта работы<br> с учениками</div>
+                <div class="about__stat__content" style="text-align: center;"><p>50</p>учеников от 4 до 25 лет<br> обучил за все годы практики</div>
+                <div class="about__stat__content" style="text-align: right;"><p>89%</p>из которых довольны<br> результатом и качеством<br> полученных знаний</div>
+            </div>
+
         </div>
     </section>
 
