add dad's and diplom photoes, delete about__stat

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
 
                 <!--Фото-->
-                <img class="intro__photo" src="" alt=""></img>
+                <img class="intro__photo" src="img/photo.png" alt="Фото"></img>
             </div>
 
         </div>
@@ -63,23 +63,23 @@
 
                 <div class="about__photo">
                     <!--Фото-->
-                    <img src="" alt="">
+                    <img src="img/diplom.jpg" alt="diplom" class="intro__diplom">
                 </div>
 
                 <div class="about__text">
                     <h2 class="about__title">О себе</h2>
-                    <p>Здравствуйте! Я преподаватель с огромным опытом преподавания физики для детей.</p>
-                    <p>Сумею заинтересовать и научу любить этот предмет!
-                        Много лет работаю с детьми разного возраста, а также со студентами.</p>
-                    <p> Последние 5 лет активно преподаю по Skype и Zoom</p>
+                    <p>Здравствуйте! Я преподаватель физики с большим опытом преподавания для школьников.</p>
+                    <p>Закончил БГУ, ГрГУ, призёр республиканский олимпиад.</p>
+                    <p>Имею опыт работы с школьниками 7-11 классов, а также со студентами.</p>
+                    <p>Преподаю оффлайн и онлайн по Skype и Zoom</p>
                 </div>
             </div>
-            <div class="about__stat">
+            <!--
+                <div class="about__stat">
                 <div class="about__stat__content" style="text-align: left;"><p>7</p>лет лет практики и опыта работы<br> с учениками</div>
                 <div class="about__stat__content" style="text-align: center;"><p>50</p>учеников от 4 до 25 лет<br> обучил за все годы практики</div>
                 <div class="about__stat__content" style="text-align: right;"><p>89%</p>из которых довольны<br> результатом и качеством<br> полученных знаний</div>
-            </div>
-
+            -->
         </div>
     </section>
 
